# marketing-mix-model-lite

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
src/data/: generate.py
src/insights/: __init__.py  decompose.py  roas.py  scenarios.py
src/model/: __init__.py  mmm.py
src/transforms/: __init__.py  adstock.py  saturation.py
src/validation/: __init__.py  cv.py  metrics.py
src/viz/: __init__.py  channel_contribution.R  export_data.py  roas_chart.py
tests/: test_insights.py  test_model.py  test_placeholder.py  test_transforms.py  test_validation.py
