[project]
name = "mmm-lite"
version = "0.1.0"
description = "Lightweight Marketing Mix Model for gaming"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W"]
